--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,11 @@ tempfile = { version = "3.1" }
 xz2 = {version = "0.1", optional = true }
 hdrhistogram = {version = "6", optional = true }
 
+# postgres
+postgres = { version = "0.17.1", features = ["with-serde_json-1", "with-chrono-0_4"] }
+postgres-protocol = { version = "0.5" }
+tokio-postgres = { version = "0.5.2" }
+
 # kafka
 rdkafka = {version = "0.22", optional = true}
 rdkafka-sys = {version = "=1.2.2", optional = true}
