--- a/Cargo.toml
+++ b/Cargo.toml
@@ -112,6 +112,8 @@ hyper = "0.10"  # chan't update this because of google
 # logstash grok patterns
 grok = "1"
 
+snmalloc-rs = { version = "0.1.0", optional = true }
+
 [dev-dependencies]
 matches = "0.1"
 # criterion = "0.2"
@@ -131,5 +133,6 @@ ws-echo = []
 #mssql = ["tiberius", "futures-state-stream", "tokio-current-thread" ]
 # php-runtime = ["php"]
 # drop_copy = ["notify"]
+snmalloc = ["snmalloc-rs"]
 
 [patch.crates-io]
