--- a/tremor-server/Cargo.toml
+++ b/tremor-server/Cargo.toml
@@ -21,6 +21,8 @@ actix-cors = "0.1"
 #mimalloc = { version = "0.1.6", default-features = false }
 #jemallocator = "0.3.2"
 mimalloc = { git = "https://github.com/purpleprotocol/mimalloc_rust", tag = "v0.1.6", default-features = false }
+snmalloc-rs = { version = "0.1.0", optional = true }
+
 
 [features]
 default = []
