--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ simd-json = {version = "0.2", features = ["known-key"]}
 threadpool = "1"
 tremor-pipeline = { path = "tremor-pipeline" }
 url = "1.7" # we can't update because of deps ...
+async-tungstenite = "0.4.0"
 
 log = "0.4"
 serde_derive = "1"
